--- a/assets/style.css
+++ b/assets/style.css
@@ -5,4 +5,29 @@
 .search-header { 
     font-weight: bold; 
     font-size: 22px;
+} 
+
+.uv-low { 
+    background-color: green ;
+
+} 
+
+.uv-mod { 
+    background-color:yellow;
+
+} 
+
+.uv-high { 
+    background-color: orange;
+
+} 
+
+.uv-veryhigh{ 
+    background-color: red;
+
+} 
+
+.uv-extreme{ 
+    background-color: purple;
+
 }
